# auto-message

./: README.md  Whatapps auto msg.py  app.py  pyproject.toml  requirements.txt
templates/: about.html  auto_msg.html  contactus.html  home.html  layout.html
